--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,28 @@
         <h1>Entra de forma segura al mundo del comercio online</h1>
         <button>Comenzar curso</button>
     </section>
-    <section id="about-course"></section>
+    <section id="about-course">
+        <h2>¿Quiénes somos?</h2>
+        <p>Un pato, que va cantando alegremente cuac, cuac, cuando se encuentra a un lindo gato, miau, miau</p>
+        <div class="about-course-controls">
+
+            <img src="flecha.png" alt="<" class="left-arrow">
+
+            <div class="controls-circles">
+                <div class="controls-circle">
+                    <div class="circle-inside circle-selected"></div>
+                </div>
+                <div class="controls-circle">
+                    <div class="circle-inside"></div>
+                </div>
+                <div class="controls-circle">
+                    <div class="circle-inside"></div>
+                </div>
+            </div>
+
+            <img src="flecha.png" alt=">" class="right-arrow">
+        </div>
+    </section>
     <section id="about-us"></section>
 
     <script src="script.js" type="module"></script>
