--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,8 +16,8 @@
 
     <header>
         <div class="header-top">
-            <a class="a-hidden" href="#about-course">Sobre nosotros</a>
-            <a class="a-hidden" href="#about-us">Sobre el curso</a>
+            <a class="a-hidden" href="#about-us">Sobre nosotros</a>
+            <a class="a-hidden" href="#about-course">Sobre el curso</a>
         </div>
         <div class="header-img">
             <img src="" alt="menú">
@@ -28,12 +28,12 @@
         <h1>Entra de forma segura al mundo del comercio online</h1>
         <button>Comenzar curso</button>
     </section>
-    <section id="about-course">
+    <section id="about-us">
         <h2>¿Quiénes somos?</h2>
         <p>Un pato, que va cantando alegremente cuac, cuac, cuando se encuentra a un lindo gato, miau, miau</p>
-        <div class="about-course-controls">
+        <div class="about-us-controls">
 
-            <img src="flecha.png" alt="<" class="left-arrow">
+            <img src="flecha.png" alt="atrás" class="left-arrow">
 
             <div class="controls-circles">
                 <div class="controls-circle">
@@ -47,10 +47,43 @@
                 </div>
             </div>
 
-            <img src="flecha.png" alt=">" class="right-arrow">
+            <img src="flecha.png" alt="adelante" class="right-arrow">
         </div>
     </section>
-    <section id="about-us"></section>
+    <section id="about-course">
+        <h2 class="about-course-h2">Sobre el curso</h2>
+
+        <div class="course-information">
+            <h2 class="course-information-title">Módulo 1</h2>
+            <div class="course-information-text">
+                <h2>Módulo 1</h2>
+                <p>En éste módulo, se verán los fundamentos de x cosa, además de que se presentarán las estrategias a seguir dentro del curso</p>
+            </div>
+            <div class="about-course-controls">
+                <img src="flecha.png" alt="atrás" class="about-course-left-arrow">
+                <p class="course-information-index">1</p>
+                <img src="flecha.png" alt="adelante" class="about-course-right-arrow">
+            </div>
+
+            <div class="about-course-controls-computer">
+                <div class="module-btn module-btn-selected">
+                    <p>Módulo 1</p>
+                </div>
+                <div class="module-btn">
+                    <p>Módulo 2</p>
+                </div>
+                <div class="module-btn">
+                    <p>Módulo 3</p>
+                </div>
+                <div class="module-btn">
+                    <p>Módulo 4</p>
+                </div>
+                <div class="module-btn">
+                    <p>Módulo 5</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="script.js" type="module"></script>
 </body>
