--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a class="a-hidden" href="#about-course">Sobre el curso</a>
         </div>
         <div class="header-img">
-            <img src="" alt="menú">
+            <img src="candado.png" alt="menú">
         </div>
     </header>
 
@@ -30,7 +30,7 @@
     </section>
     <section id="about-us">
         <h2>¿Quiénes somos?</h2>
-        <p>Un pato, que va cantando alegremente cuac, cuac, cuando se encuentra a un lindo gato, miau, miau</p>
+        <p>Somos un grupo de estudiantes de grado 11 que busca implementar sus conocimientos tecnológicos con el fin de ayudar a los adultos mayores a navegar de forma segura en el internet</p>
         <div class="about-us-controls">
 
             <img src="flecha.png" alt="atrás" class="left-arrow">
@@ -57,7 +57,8 @@
             <h2 class="course-information-title">Módulo 1</h2>
             <div class="course-information-text">
                 <h2>Módulo 1</h2>
-                <p>En éste módulo, se verán los fundamentos de x cosa, además de que se presentarán las estrategias a seguir dentro del curso</p>
+                <p>En éste módulo vamos a hablar sobre lo que es tener una cuenta en un sitio web, como estas se entrelazan, como NO se entrelazan, qué datos requieren ciertas páginas para poder ingresar a ellas y por que los requieren y cuando NO es confiable dar todos tus datos personales.
+                </p>
             </div>
             <div class="about-course-controls">
                 <img src="flecha.png" alt="atrás" class="about-course-left-arrow">
