--- a/curso.html
+++ b/curso.html
@@ -25,7 +25,10 @@
 
     <section id="video">
         <div class="screen">
-            <video src="introduccion.mp4" controls></video>
+            <div class="video-start">
+                <button>Presioname para iniciar el video</button>
+            </div>
+            <video src="introduccion.mp4"></video>
         </div>
         <div class="controls">
             <div class="volume">
@@ -33,7 +36,10 @@
                 <p>Volumen</p>
                 <p class="volume-max">+</p>
             </div>
-            <div class="pause"></div>
+            <div class="pause">
+                <p>Pausar</p>
+                <img src="boton-de-pausa.png" alt="Pausar">
+            </div>
             <div class="return-time">
                 <p>Volver 10 segundos</p>
             </div>
