--- a/curso.html
+++ b/curso.html
@@ -28,7 +28,7 @@
             <div class="video-start">
                 <button>Presioname para iniciar el video</button>
             </div>
-            <video src="introduccion.mp4"></video>
+            <video src="bienvenida.mp4"></video>
         </div>
         <div class="controls">
             <div class="volume">
