--- a/curso.html
+++ b/curso.html
@@ -18,7 +18,7 @@
             <img src="candado.png" alt="menú">
         </div>
         <div class="line"></div>
-        <h1>Módulo 1</h1>
+        <h1>Curso</h1>
     </header>
 
     <div class="header-space"></div>
@@ -61,10 +61,10 @@
         </p>
     </div>
 
-    <section id="reading" class="none">
+    <section id="reading" class=" uwunt none">
         <div class="reading-screen">
             <div class="reading-header">
-                <h2>introducción</h2>
+                <h2>Cosas a tener en cuenta</h2>
                 <div class="speech">
                     <img src="sonido.png" alt="Escuchar">
                 </div>
